Fix search bar and nav-links positioning on mobile
Tested on desktop and "mobile" (a.k.a. Dev Tools simulation tools)
on Firefox, Chrome and Safari

--- a/docs/.vuepress/styles/branding.styl
+++ b/docs/.vuepress/styles/branding.styl
@@ -166,6 +166,15 @@ h2
 .dropdown-wrapper .nav-dropdown .dropdown-item a.router-link-active::after
   border-left-color $primary600 !important
 
+// Fix search bar and nav-links positioning on mobile
+@media screen and (max-width: $MQMobile)
+  .nav-links
+    margin-top: 124px
+    background-color: white
+
+  .nav-links+.sidebar-links
+    padding-top: 244px
+
 .nav-links a
 .nav-links a.router-link-active
   font-weight 600
